acvus-mir-test/tests/snapshots/e2e__string_equality_in_filter.snap
---
source: acvus-mir-test/tests/e2e.rs
assertion_line: 1019
expression: ir
---
=== literals ===
  T0 = ""
  T1 = ","
  T2 = "admin"

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = undef
     3 |   r3 = fetch @names
     8 |   r4 = list [T0, T0, T0]
    10 |   r5 = call #0(r3)
    11 |   r6 = call #1(r5)
    12 |   r7 = closure L0 []
    13 |   r8 = call #2(r6, r7)
    16 |   r9 = call #3(r8, T1)
    17 |   r10 = string_concat [T0, T0, T0, r9]
    18 |   commit @names = r4
    19 |   return r10

    ; r0 (v23) : Array<String, 3>
    ; r1 (v24) : Array<String, 3>
    ; r2 (v25) : Iterator<String, Pure, #IdentityId(0)>
    ; r3 (@names) : Array<String, 3>
    ; r4 (v9) : Array<String, 3>
    ; r5 (v12) : List<String>
    ; r6 (into_iter(...)) : Iterator<String, Pure, #IdentityId(0)>
    ; r7 (v14) : Fn(&String) -> Bool
    ; r8 (filter(...)) : Iterator<String, Pure, #IdentityId(0)>
    ; r9 (join(...)) : String
    ; r10 (v21) : String
    ; r11 (v22) : Array<String, 3>
    ; r12 (names) : Array<String, 3>
    ; r13 (@names) : Array<String, 3>
    ; r14 (v6) : String
    ; r15 (v17) : String
    ; r16 (names) : Array<String, 3>
    ; r17 (x) : Iterator<String, Pure, #IdentityId(0)>
    ; r18 (v7) : String
    ; r19 (v10) : String
    ; r20 (@names) : Array<String, 3>
    ; r21 (v5) : String
    ; r22 (x) : Iterator<String, Pure, #IdentityId(0)>
    ; r23 (v8) : String
    ; r24 (v19) : String

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     2 |   assign v5 = T2
     3 |   r1 = ref &v5
     4 |   r2 = string_eq r3 r1
     5 |   r4 = !r2
     6 |   return r4

    ; r0 (v9) : &String
    ; r1 (var_5.) : &String
    ; r2 (v8) : Bool
    ; r3 (v1) : &String
    ; r4 (v7) : Bool
    ; r5 (n) : &String
    ; r6 (n) : &String
    ; r7 (v5) : String
    ; r8 (v4) : String
