acvus-mir-test/tests/snapshots/e2e__text_only.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = "hello world"

=== main ===
     2 |   r0 = T0 + T1
     3 |   return r0

    ; r0 (v3) : String
    ; r1 (v2) : String
    ; r2 (v1) : String
