acvus-mir-test/tests/snapshots/e2e__to_float_conversion.snap
---
source: acvus-mir-test/tests/e2e.rs
assertion_line: 628
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @n
     3 |   r3 = call #0(r2)
     5 |   r4 = call #1(r3)
     6 |   r5 = string_concat [T0, r4]
     7 |   commit @n = r2
     8 |   return r5

    ; r0 (v11) : Int
    ; r1 (v12) : Float
    ; r2 (@n) : Int
    ; r3 (to_float(...)) : Float
    ; r4 (to_string(...)) : String
    ; r5 (v9) : String
    ; r6 (x) : Float
    ; r7 (@n) : Int
    ; r8 (v10) : Int
    ; r9 (v6) : String
    ; r10 (x) : Float
    ; r11 (@n) : Int
