acvus-mir-test/tests/snapshots/e2e__to_int_conversion.snap
---
source: acvus-mir-test/tests/e2e.rs
assertion_line: 641
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @f
     3 |   r3 = call #0(r2)
     5 |   r4 = call #1(r3)
     6 |   r5 = string_concat [T0, r4]
     7 |   commit @f = r2
     8 |   return r5

    ; r0 (v11) : Float
    ; r1 (v12) : Int
    ; r2 (@f) : Float
    ; r3 (to_int(...)) : Int
    ; r4 (to_string(...)) : String
    ; r5 (v9) : String
    ; r6 (x) : Int
    ; r7 (@f) : Float
    ; r8 (v10) : Float
    ; r9 (v6) : String
    ; r10 (x) : Int
    ; r11 (@f) : Float
