acvus-mir-test/tests/snapshots/e2e__triple_pipe_chain.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @items
     4 |   r3 = list []
     5 |   r4 = call #0(r3)
     7 |   r5 = call #1(r2)
     8 |   r6 = closure L0 []
     9 |   r7 = call #2(r5, r6)
    10 |   r8 = closure L1 []
    11 |   r9 = call #3(r7, r8)
    12 |   r10 = closure L2 []
    13 |   r11 = call #3(r9, r10)
    14 |   r12 = call #4(r11)
    15 |   assign x = r12
    17 |   r13 = ref &x
    18 |   r14 = call #5(r13)
    19 |   r15 = call #6(r14)
    20 |   r16 = string_concat [T0, T0, T0, r15]
    21 |   commit @items = r4
    22 |   return r16

    ; r0 (v25) : List<Int>
    ; r1 (v26) : List<Int>
    ; r2 (@items) : List<Int>
    ; r3 (v6) : Array<Int, 0>
    ; r4 (list(...)) : List<Int>
    ; r5 (into_iter(...)) : Iterator<Int, Pure, #IdentityId(0)>
    ; r6 (v11) : Fn(&Int) -> Bool
    ; r7 (filter(...)) : Iterator<Int, Pure, #IdentityId(0)>
    ; r8 (v13) : Fn(Int) -> Int
    ; r9 (map(...)) : Iterator<Int, Pure, #IdentityId(0)>
    ; r10 (v15) : Fn(Int) -> Int
    ; r11 (map(...)) : Iterator<Int, Pure, #IdentityId(0)>
    ; r12 (collect(...)) : List<Int>
    ; r13 (x.) : &List<Int>
    ; r14 (len(...)) : Int
    ; r15 (to_string(...)) : String
    ; r16 (v23) : String
    ; r17 (@items) : List<Int>
    ; r18 (items) : List<Int>
    ; r19 (x) : List<Int>
    ; r20 (@items) : List<Int>
    ; r21 (items) : List<Int>
    ; r22 (v24) : List<Int>
    ; r23 (v5) : String
    ; r24 (v8) : String
    ; r25 (v19) : String

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     1 |   r1 = take (*r2)
     3 |   r3 = r1 != 0 (r4)
     4 |   return r3

    ; r0 (v7) : &Int
    ; r1 (v4) : Int
    ; r2 (v1) : &Int
    ; r3 (v6) : Bool
    ; r4 (v5) : Int
    ; r5 (i) : &Int
    ; r6 (i) : &Int

=== closure L1 (ValueId(0)) ===
     0 |   r0 = undef
     2 |   r1 = r2 + 1 (r3)
     3 |   return r1

    ; r0 (v6) : Int
    ; r1 (v5) : Int
    ; r2 (v1) : Int
    ; r3 (v4) : Int
    ; r4 (i) : Int
    ; r5 (i) : Int

=== closure L2 (ValueId(0)) ===
     0 |   r0 = undef
     2 |   r1 = r2 * 2 (r3)
     3 |   return r1

    ; r0 (v6) : Int
    ; r1 (v5) : Int
    ; r2 (v1) : Int
    ; r3 (v4) : Int
    ; r4 (i) : Int
    ; r5 (i) : Int
