acvus-mir-test/tests/snapshots/e2e__tuple_nested_destructure.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     3 |   r2 = take @data
     4 | L2:
     6 |   r3 = r2.0
     8 |   r4 = true (r5) && true (r6)
     9 |   r7 = r2.1
    11 |   r8 = test has_key(r7, "x")
    12 |   r9 = r7.x
    14 |   r10 = true (r11) && true (r12)
    15 |   r13 = r4 && r10
    16 |   jump_if r13 then L3 else L1
    17 | L3:
    18 |   r14 = r2.0
    19 |   r15 = r2.1
    20 |   r16 = r15.x
    22 |   r17 = T0 + r14
    23 |   jump L0(r17, r14, r16)
    24 | L1:
    26 |   jump L0(T0, r0, r1)
    27 | L0(r18: String, r19: String, r20: Int):  ; merge_of L2
    28 |   r21 = T0 + r18
    29 |   return r21

    ; r0 (v25) : String
    ; r1 (v26) : Int
    ; r2 (@data) : (String, {x: Int})
    ; r3 (v4) : String
    ; r4 (v6) : Bool
    ; r5 (v3) : Bool
    ; r6 (v5) : Bool
    ; r7 (v7) : {x: Int}
    ; r8 (v9) : Bool
    ; r9 (v10) : Int
    ; r10 (v12) : Bool
    ; r11 (v8) : Bool
    ; r12 (v11) : Bool
    ; r13 (v13) : Bool
    ; r14 (label) : String
    ; r15 (v16) : {x: Int}
    ; r16 (x) : Int
    ; r17 (v21) : String
    ; r18 (v23) : String
    ; r19 (v27) : String
    ; r20 (v28) : Int
    ; r21 (v24) : String
    ; r22 (v22) : String
    ; r23 (label) : String
    ; r24 (v1) : String
    ; r25 (v19) : String
