acvus-mir-test/tests/snapshots/e2e__tuple_pattern_wildcard.snap
---
source: acvus-mir-test/tests/e2e.rs
assertion_line: 404
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = fetch @pair
     2 |   assign @pair = r1
     3 | L2:
     5 |   jump_if true (r2) then L3 else L4
     6 | L3:
     8 |   jump L5(true (r3))
     9 | L4:
    11 |   jump L5(false (r4))
    12 | L5(r5: Bool):
    13 |   jump_if r5 then L6 else L1
    14 | L6:
    15 |   r6 = take @pair[0]
    16 |   r7 = string_clone r6
    17 |   r8 = string_concat [r7]
    18 |   jump L0(r8, r6)
    19 | L1:
    21 |   jump L0(T0, r0)
    22 | L0(r9: String, r10: String):  ; merge_of L2
    23 |   r11 = string_concat [r9]
    24 |   r12 = take @pair
    25 |   commit @pair = r12
    26 |   return r11

    ; r0 (v15) : String
    ; r1 (@pair) : (String, i64)
    ; r2 (v3) : Bool
    ; r3 (v5) : Bool
    ; r4 (v6) : Bool
    ; r5 (v4) : Bool
    ; r6 (name) : String
    ; r7 (v18) : String
    ; r8 (v10) : String
    ; r9 (v12) : String
    ; r10 (v17) : String
    ; r11 (v13) : String
    ; r12 (v14) : (String, i64)
    ; r13 (v11) : String
    ; r14 (name) : String
    ; r15 (@pair) : (String, i64)
    ; r16 (v16) : String
    ; r17 (name) : String
