acvus-mir-test/tests/snapshots/e2e__tuple_with_list_element.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = undef
     4 |   r3 = ref @data
     5 |   r4 = load r3
     6 | L2:
     8 |   r5 = r4.0
    10 |   r6 = true (r7) && true (r8)
    11 |   r9 = r4.1
    13 |   r10 = r6 && true (r11)
    14 |   jump_if r10 then L3 else L1
    15 | L3:
    16 |   r12 = r4.0
    17 |   r13 = r4.1
    19 |   r14 = T0 + r12
    22 |   jump L4(0 (r15), T0, r2)
    23 | L4(r16: Int, r17: String, r18: Int):
    24 |   list_step r19, r20 = r13[r16] else L5(r17)
    25 | L7:
    27 |   r21 = call #0(r19)
    28 |   r22 = T0 + r21
    29 |   r23 = r17 + r22
    30 |   jump L4(r20, r23, r19)
    31 | L5(r24: String):
    32 |   jump L6(r24)
    33 | L6(r25: String):
    34 |   r26 = r14 + r25
    35 |   jump L0(r26, r12, r13, r18)
    36 | L1:
    38 |   jump L0(T0, r0, r1, r2)
    39 | L0(r27: String, r28: String, r29: List<Int>, r30: Int):  ; merge_of L2
    40 |   r31 = T0 + r27
    41 |   return r31

    ; r0 (v43) : String
    ; r1 (v44) : List<Int>
    ; r2 (v45) : Int
    ; r3 (@data) : Ref<(String, List<Int>)>
    ; r4 (v3) : (String, List<Int>)
    ; r5 (v5) : String
    ; r6 (v7) : Bool
    ; r7 (v4) : Bool
    ; r8 (v6) : Bool
    ; r9 (v8) : List<Int>
    ; r10 (v10) : Bool
    ; r11 (v9) : Bool
    ; r12 (label) : String
    ; r13 (items) : List<Int>
    ; r14 (v20) : String
    ; r15 (v23) : Int
    ; r16 (v25) : Int
    ; r17 (v26) : String
    ; r18 (v48) : Int
    ; r19 (x) : Int
    ; r20 (v28) : Int
    ; r21 (to_string(...)) : String
    ; r22 (v35) : String
    ; r23 (v36) : String
    ; r24 (v37) : String
    ; r25 (v38) : String
    ; r26 (v39) : String
    ; r27 (v41) : String
    ; r28 (v49) : String
    ; r29 (v50) : List<Int>
    ; r30 (v51) : Int
    ; r31 (v42) : String
    ; r32 (items) : List<Int>
    ; r33 (v47) : List<Int>
    ; r34 (v24) : String
    ; r35 (v46) : String
    ; r36 (v30) : Ref<Int>
    ; r37 (v31) : String
    ; r38 (v18) : Ref<String>
    ; r39 (v40) : String
    ; r40 (v21) : Ref<List<Int>>
    ; r41 (x) : Int
    ; r42 (v17) : String
    ; r43 (v1) : String
    ; r44 (v32) : Ref<Int>
    ; r45 (v13) : Ref<String>
    ; r46 (v16) : Ref<List<Int>>
    ; r47 (label) : String
